# ai-advanced

./: .env.example  .gitignore  0001-implement-model-routing.patch  0001-release-protect-prompt-injection.patch  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/profiles/: bugfix.md  migration.md  research.md
.continue/: config.yaml
alembic/: env.py
alembic/versions/: b3e9a1c72d04_add_users_table.py  d80693fedadb_initial.py
docs/: day5-execution-loop.md  testing-report.md
docs/adr/: 001-aiogram.md
docs/day10/: day10-micro-model.md  day10-report.md
docs/day11/: day11-attack-log.md  day11-hardened-prompt.md  day11-injection-collection.md
docs/day12/: day12-attack-report.md  day12-indirect-injection.md
docs/day13/: day13-gateway.md
docs/day14/: day14-security-prompt.md
docs/day6/: day6-baseline.md  vacancies.txt
docs/day7/: day7-confidence.md  day7-report.md
docs/day8/: day8-report.md  day8-routing.md
docs/day9/: day9-multi-stage.md  day9-report.md
finetuning/: README.md
finetuning/scripts/: baseline.py  finetune_client.py  generate_synthetic.py  inference_pipeline.py  merge_split.py  parse_vacancies.py  test_inference.py  validate.py
gateway/: .env.example  README.md  pyproject.toml  requirements.txt  security_review.py
gateway/logs/: audit.jsonl
gateway/src/: __init__.py  config.py  main.py
gateway/tests/: conftest.py  test_input_guard.py  test_output_guard.py  test_proxy.py
src/: __init__.py  bot.py  config.py  di.py
tasks/: execution-log.md  local-model-prompts.md
tests/: conftest.py
(+75 files in other folders)
