[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "telegram-ai-assistant"
version = "0.1.0"
description = "Personal Telegram AI assistant powered by Claude"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "pydantic-settings",
    "anthropic",
    "alembic",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
